# mcp-one

./: .dockerignore  .env.example  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: ISSUE_TEMPLATE.md
docs/: index.rst  installation.rst  make.bat  usage.rst
dummy_mcp/: main.py
mcp-one-ui/: package-lock.json  package.json  postcss.config.cjs
mcp-one-ui/src/: App.jsx
mcp-one-ui/src/components/: Sidebar.jsx
scripts/: deploy.sh  start.sh
src/: config.yaml
src/app/: __init__.py  main.py
src/app/core/: __init__.py  registry.py  router.py
src/app/models/: __init__.py  schemas.py
tests/: __init__.py  test_mcp_hub.py
